<resources>
    <string name="app_name">VelohProject</string>
    <string name="title_activity_map">MapActivity</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>

    <string name="luxembourg_city">Luxembourg City</string>

    <!-- *********************** FOR JSON TEMPLATE FILE  *********************** -->
    <string name="JSON_TEMPLATE_FILENAME" translatable="false">HistoryTemplate.json</string>

    <!-- *********************** FOR SHAREDPREFERENCES FILE  *********************** -->
    <string name="PREFS_FILENAME" translatable="false">velohproject_prefs</string>
    <string name="PREFS_HISTORY_KEY" translatable="false">velohproject_history</string>

    <!-- *********************** FOR HISTORY JSON  *********************** -->
    <string name="HISTORY_JSON_STRING" translatable="false">HISTORY_JSON</string>
    <string name="HISTORY_JSON_RECORDS_KEY" translatable="false">records</string>
    <string name="HISTORY_JSON_RANGE_KEY" translatable="false">range</string>
    <string name="HISTORY_JSON_LOCATION_STREET_KEY" translatable="false">location_street</string>
    <string name="HISTORY_JSON_LOCATION_CITY_KEY" translatable="false">location_city</string>
    <string name="HISTORY_JSON_USER_LOCATION_STREET_KEY" translatable="false">user_location_street</string>
    <string name="HISTORY_JSON_USER_LOCATION_CITY_KEY" translatable="false">user_location_city</string>
    <string name="HISTORY_JSON_STATION_NAME_KEY" translatable="false">name</string>
    <string name="HISTORY_JSON_VELOHSTATION_NUMBER_KEY" translatable="false">number</string>
    <string name="HISTORY_JSON_LOCATION_DESTINATION_NAME_KEY" translatable="false">destination_name</string>
    <string name="HISTORY_JSON_LOCATION_LATITUDE_LONGITUDE_KEY" translatable="false">latlng</string>
    <string name="HISTORY_JSON_LOCATION_LATITUDE_KEY" translatable="false">lat</string>
    <string name="HISTORY_JSON_LOCATION_LONGITUDE_KEY" translatable="false">lng</string>
    <string name="HISTORY_JSON_USER_LOCATION_KEY" translatable="false">user_location</string>
    <string name="HISTORY_JSON_DESTINATION_LOCATION_KEY" translatable="false">destination_location</string>
    <string name="HISTORY_JSON_DESTINATION_LOCATION_VALUE" translatable="false">destinationlocation</string>
    <string name="HISTORY_JSON_LOCATION_KEY" translatable="false">location</string>
    <string name="HISTORY_JSON_DATE_KEY" translatable="false">date</string>
    <string name="HISTORY_JSON_DATE_VALUE_FORMAT" translatable="false">dd/MM/yyyy HH:mm:ss</string>
    <string name="HISTORY_JSON_RANGE_METER_VALUE_KEY" translatable="false">range</string>
    <string name="HISTORY_JSON_NEAREST_STATION_VALUE" translatable="false">nearest</string>
    <string name="HISTORY_JSON_ALLBUSSTAIONS_VALUE" translatable="false">allbusstations</string>
    <string name="HISTORY_JSON_ALLVELOHSTATIONS_VALUE" translatable="false">allvelohstations</string>
    <string name="HISTORY_JSON_STATIONS_BY_PLACE_KEY" translatable="false">place</string>
    <string name="HISTORY_JSON_ID_KEY" translatable="false">id</string>
    <string name="HISTORY_JSON_BUSSTATION_ID_KEY" translatable="false">stationid</string>
    <string name="HISTORY_JSON_RECORD_TYPE_KEY" translatable="false">record_type</string>
    <string name="HISTORY_JSON_STATION_TYPE_KEY" translatable="false">type</string>
    <string name="HISTORY_JSON_BUS_STATION_TYPE_VALUE" translatable="false">bus</string>
    <string name="HISTORY_JSON_VELOH_STATION_TYPE_VALUE" translatable="false">veloh</string>
    <string name="HISTORY_JSON_STATIONS_ARRAY_KEY" translatable="false">stations</string>
    <string name="HISTORY_JSON_VELOH_STATION_TOTAL_BIKE_STANDS_KEY" translatable="false">bike_stands</string>
    <string name="HISTORY_JSON_VELOH_STATION_AVAILABLE_BIKE_KEY" translatable="false">available_bikes</string>
    <string name="HISTORY_JSON_VELOH_STATION_AVAILABLE_BIKE_STANDS_KEY" translatable="false">available_bike_stands</string>
    <string name="HISTORY_JSON_VELOH_STATION_LOCATION_POSITION_KEY" translatable="false">position</string>

    <string-array name="history_spinner_array">
        <item>All</item>
        <item>Bus</item>
        <item>Veloh</item>
    </string-array>
    <string name="title_activity_preferences">Settings</string>

    <!-- *********************** DIALOGS *********************** -->
    <string name="DIALOG_TITLE_BUSSTATION_INFO">Bus Station Information</string>
    <string name="DIALOG_BUSSTATION_NAME_COLOR_HEX" translatable="false">#CD5C5C"</string>
    <string name="DIALOG_TITLE_VELOHSTATION_INFO">Veloh Station Information</string>
    <string name="DIALOG_NO_BUSSES">No busses at the moment…</string>
    <string name="DIALOG_NO_BUS_STATIONS_FOUND_FOR_LOCATION">No matching bus stations found…</string>
    <string name="DIALOG_NO_VELOH_STATIONS_FOUND_FOR_LOCATION">No matching Veloh stations found…</string>
    <string name="DIALOG_ASK_USER_FOR_RANGE">Give a range in meter: </string>
    <string name="DIALOG_UNKNOWN_USER_LOCATION">Unknown user location…</string>
    <string name="DIALOG_OK">OK</string>
    <string name="DIALOG_CLOSE">Close</string>
    <string name="DIALOG_CANCEL">Cancel</string>

    <!-- *********************** NAVIGATION MENU ITEMS *********************** -->
    <string name="NAV_MENU_SHOW">Show</string>
    <string name="NAV_MENU_FILTER">Filter</string>
    <string name="NAV_ITEM_HISTORY">History</string>
    <string name="NAV_ITEM_PREF">Preferences</string>
    <string name="NAV_ITEM_ABOUT">About</string>
    <string name="NAV_ITEM_STATIONS_BUS">Bus stations</string>
    <string name="NAV_ITEM_STATIONS_VELOH">Veloh stations</string>
    <string name="NAV_ITEM_FILTER_RANGE">Request stations in range</string>
    <string name="NAV_ITEM_FILTER_NEAREST">Request nearest station</string>
    <string name="NAV_ITEM_FILTER_PLACE">Request stations by place</string>

    <!-- *********************** HISTORY ACTIVITY *********************** -->
    <string name="TITLE_HISTORY">History</string>
    <string name="STATION_TYPE">Type:</string>
    <string name="BUS_STATIONS_ALL">All bus stations</string>
    <string name="VELOH_STATIONS_ALL">All veloh stations</string>
    <string name="NEAREST">nearest</string>
    <string name="RANGE">with range</string>

    <!-- *********************** STATION VELOH *********************** -->
    <string name="VELOH_AVAILABLE_BIKES">Available bikes:</string>
    <string name="VELOH_EMPTY_STANDS">Empty stands:</string>
    <string name="VELOH_TOTAL_STANDS">Total stands:</string>

    <!-- *********************** ABOUT *********************** -->
    <string name="ABOUT_GITHUB" translatable="false">IceYoshi/VelohProject</string>

    <string name="ABOUT_MIKE_NAME" translatable="false">Mike Pereira Gonçalves</string>
    <string name="ABOUT_MIKE_ID" translatable="false">0130898735</string>
    <string name="ABOUT_MIKE_EMAIL" translatable="false">mike.pereira.001@student.uni.lu</string>

    <string name="ABOUT_DREN_NAME" translatable="false">Dren Gashi</string>
    <string name="ABOUT_DREN_ID" translatable="false">0130732528</string>
    <string name="ABOUT_DREN_EMAIL" translatable="false">dren.gashi.001@student.uni.lu</string>

    <string name="ABOUT_AUTHORS">Authors:</string>
    <string name="ABOUT_DESCRIPTION">VelohProject is our entry to the \"Luxembourg City Bus and Bike\" Project for the class \"Principles of Software Development\". The App is meant to be a public transportation guide of Luxembourg. It displays all bus and Veloh stations within Luxembourg and lets you request additional information about them. It also comes with a search functionality in order to only show relevant information.</string>

    <!-- *********************** PREFERENCES *********************** -->

    <!-- GENERAL -->
    <string name="PREF_HEADER_GENERAL">General</string>
    <string name="PREF_LOCALE">Change language</string>
    <string name="PREF_DEFAULT_STATION_TYPE">Default station type on startup</string>
    <string name="PREF_DEFAULT_STATION_TYPE_KEY" translatable="false">pref_default_station_type_key</string>

    <string-array name="PREF_STATION_TYPES">
        <item>Bus</item>
        <item>Veloh</item>
    </string-array>

    <!-- MAP -->
    <string name="PREF_HEADER_MAP">Map</string>

    <string name="PREF_BUS_MARKER_COLOR">Bus station marker color</string>
    <string name="PREF_BUS_MARKER_COLOR_KEY" translatable="false">pref_bus_marker_color_key</string>

    <string name="PREF_VELOH_MARKER_COLOR">Veloh station marker color</string>
    <string name="PREF_VELOH_MARKER_COLOR_KEY" translatable="false">pref_veloh_marker_color_key</string>

    <string name="PREF_DEST_MARKER_COLOR">Destination marker color</string>
    <string name="PREF_DEST_MARKER_COLOR_KEY" translatable="false">pref_dest_marker_color_key</string>

    <string-array name="PREF_MARKER_COLOR_NAMES">
        <item>Black</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Grey</item>
        <item>Orange</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Turquoise</item>
        <item>White</item>
        <item>Yellow</item>
    </string-array>

    <string-array name="PREF_MARKER_COLOR_VALUES">
        <item>custommarkerblack</item>
        <item>custommarkerblue</item>
        <item>custommarkergreen</item>
        <item>custommarkergrey</item>
        <item>custommarkerorange</item>
        <item>custommarkerpink</item>
        <item>custommarkerpurple</item>
        <item>custommarkerred</item>
        <item>custommarkerturkis</item>
        <item>custommarkerwhite</item>
        <item>custommarkeryellow</item>
    </string-array>

    <!-- HISTORY -->
    <string name="PREF_HEADER_HISTORY">History</string>

    <string name="PREF_HISTORY_CLEAR">Clear history on startup</string>
    <string name="PREF_HISTORY_CLEAR_KEY" translatable="false">pref_history_clear_key</string>

    <string name="PREF_REQUEST_LOGGING">Log requests in history</string>
    <string name="PREF_REQUEST_LOGGING_KEY" translatable="false">pref_request_logging_key</string>

    <string name="PREF_HISTORY_SIZE">History size</string>
    <string name="PREF_HISTORY_SIZE_KEY" translatable="false">pref_history_size_key</string>

    <string-array name="PREF_HISTORY_SIZE_NAMES">
        <item>Unlimited</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>50</item>
        <item>100</item>
        <item>500</item>
    </string-array>

    <string-array name="PREF_HISTORY_SIZE_VALUES">
        <item>-1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>50</item>
        <item>100</item>
        <item>500</item>
    </string-array>
</resources>
