<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:icon="@drawable/ic_place"
        android:defaultValue="custommarkergreen"
        android:entries="@array/PREF_MARKER_COLOR_NAMES"
        android:entryValues="@array/PREF_MARKER_COLOR_VALUES"
        android:key="@string/PREF_BUS_MARKER_COLOR_KEY"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/PREF_BUS_MARKER_COLOR" />

    <ListPreference
        android:icon="@drawable/ic_place"
        android:defaultValue="custommarkerblue"
        android:entries="@array/PREF_MARKER_COLOR_NAMES"
        android:entryValues="@array/PREF_MARKER_COLOR_VALUES"
        android:key="@string/PREF_VELOH_MARKER_COLOR_KEY"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/PREF_VELOH_MARKER_COLOR" />

    <ListPreference
        android:icon="@drawable/ic_place"
        android:defaultValue="custommarkerred"
        android:entries="@array/PREF_MARKER_COLOR_NAMES"
        android:entryValues="@array/PREF_MARKER_COLOR_VALUES"
        android:key="@string/PREF_DEST_MARKER_COLOR_KEY"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/PREF_DEST_MARKER_COLOR" />

</PreferenceScreen>
